--- a/src/app/pages/private/clientes/clientes-insert-edit/clientes-insert-edit.component.html
+++ b/src/app/pages/private/clientes/clientes-insert-edit/clientes-insert-edit.component.html
@@ -68,21 +68,21 @@
     </div>
 
     <div *ngIf="!!entity?.id" class="container-data">
-      <div class="row">
-        <card>
-          <div class="card-header">
-            <h4 class="card-title">Endereços</h4>
-          </div>
+<!--      <div class="row">-->
+<!--        <card>-->
+<!--          <div class="card-header">-->
+<!--            <h4 class="card-title">Endereços</h4>-->
+<!--          </div>-->
 
-          <div class="card-body">
-            <dg-table dg-dynamic-table [dynamicTable]="tableEnderecos"></dg-table>
-          </div>
+<!--          <div class="card-body">-->
+<!--            <dg-table dg-dynamic-table [dynamicTable]="tableEnderecos"></dg-table>-->
+<!--          </div>-->
 
-          <div class="card-footer">
-            <button class="btn btn-success" (click)="enderecosModal.open()">Adicionar</button>
-          </div>
-        </card>
-      </div>
+<!--          <div class="card-footer">-->
+<!--            <button class="btn btn-success" (click)="enderecosModal.open()">Adicionar</button>-->
+<!--          </div>-->
+<!--        </card>-->
+<!--      </div>-->
     </div>
 
     <div *ngIf="!!entity?.id" class="container-data">
