apresentando contato e endereço em clientes

--- a/src/assets/scss/components/_tables.scss
+++ b/src/assets/scss/components/_tables.scss
@@ -22,7 +22,7 @@
     td {
       text-align: start;
       padding: .8rem 0;
-      color: grey !important;
+      color: grey;
     }
 
     .table-colum-fixed-end, .mat-column-actions {
