--- a/src/app/pages/private/clientes/clientes-insert-edit/clientes-insert-edit.component.html
+++ b/src/app/pages/private/clientes/clientes-insert-edit/clientes-insert-edit.component.html
@@ -6,6 +6,9 @@
 
         <div class="col-12">
           <card>
+            <div class="card-header">
+              <h4 class="card-title">Cliente</h4>
+            </div>
             <div class="card-body">
 
               <div class="row">
@@ -15,7 +18,6 @@
                     <input formControlName="nome" class="form-control">
                   </div>
                 </div>
-
               </div>
 
               <div class="row">
@@ -26,36 +28,67 @@
                   </div>
                 </div>
 
-                <div class="col-4 d-flex align-items-center pt-4">
-                  <div class="form-check">
-                    <input value="FISICA" formControlName="tipoPessoa" class="form-check-input" type="radio"
-                           name="tipoPessoa" id="Pessoa_fisica">
-                    <label class="form-check-label" for="Pessoa_fisica">
-                      Pessoa Física
-                    </label>
-                  </div>
-                  <div class="form-check">
-                    <input value="JURUDUCA" formControlName="tipoPessoa" class="form-check-input" type="radio"
-                           name="tipoPessoa" id="Pessoa_juridica" checked>
-                    <label class="form-check-label" for="Pessoa_juridica">
-                      Pessoa Jurídica
-                    </label>
+                <div class="col-4">
+                  <label class="form-label">Tipo de pessoa</label>
+                  <div class="btn-group" role="group">
+                    <input
+                      value="FISICA"
+                      formControlName="tipoPessoa"
+                      class="btn-check"
+                      type="radio"
+                      name="tipoPessoa"
+                      id="Pessoa_fisica"
+                      autocomplete="off"
+                    >
+                    <label class="btn btn-outline-primary" for="Pessoa_fisica">Pessoa Física</label>
+
+                    <input
+                      value="JURUDUCA"
+                      formControlName="tipoPessoa"
+                      class="btn-check"
+                      type="radio"
+                      name="tipoPessoa"
+                      id="Pessoa_juridica"
+                      autocomplete="off"
+                    >
+                    <label class="btn btn-outline-primary" for="Pessoa_juridica">Pessoa Jurídica</label>
                   </div>
                 </div>
 
-                <div class="col-4 d-flex align-items-center pt-4">
-                  <div class="form-check">
-                    <input value="1" formControlName="sexo" class="form-check-input" type="radio" name="sexo" id="masculino">
-                    <label class="form-check-label" for="masculino">
-                      Masculino
-                    </label>
+                <div class="col-4">
+                  <label class="form-label" style="width: 100%;">Sexo</label>
+                  <div class="btn-group" role="group">
+                    <input
+                      value="1"
+                      formControlName="sexo"
+                      class="btn-check"
+                      type="radio"
+                      name="sexo"
+                      id="masculino"
+                      autocomplete="off"
+                    >
+                    <label class="btn btn-outline-primary" for="masculino">Masculino</label>
+
+                    <input
+                      value="0"
+                      formControlName="sexo"
+                      class="btn-check"
+                      type="radio"
+                      name="sexo"
+                      id="feminino"
+                      autocomplete="off"
+                    >
+                    <label class="btn btn-outline-primary" for="feminino">Feminino</label>
                   </div>
-                  <div class="form-check">
-                    <input value="0" formControlName="sexo"  class="form-check-input" type="radio" name="sexo" id="feminino" checked>
-                    <label class="form-check-label" for="feminino">
-                      Feminino
-                    </label>
-                  </div>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-12">
+                  <h5 class="card-subtitle">Informações principais</h5>
+                </div>
+                <div class="col-12">
+                  <p class="card-subtitle">Contato</p>
                 </div>
               </div>
 
@@ -67,22 +100,94 @@
       </div>
     </div>
 
+    <div class="container-data">
+      <div class="row">
+        <div class="col-12">
+          <card>
+            <div class="card-header">
+              <h4 class="card-title">Informações principais</h4>
+            </div>
+            <div class="card-body">
+              <div class="row">
+                <div class="col-12">
+                  <h5 class="card-subtitle">Contato</h5>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-4">
+                  <label class="form-label f-bold">Descição</label>
+                  <p>{{ entity?.contato?.descricao || '--' }}</p>
+                </div>
+                <div class="col-4">
+                  <label class="form-label f-bold">Telefone</label>
+                  <p>{{ entity?.contato?.telefone || '--' }}</p>
+                </div>
+                <div class="col-4">
+                  <label class="form-label f-bold">E-mail</label>
+                  <p>{{ entity?.contato?.email || '--' }}</p>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-12">
+                  <h5 class="card-subtitle">Endereço</h5>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-4">
+                  <label class="form-label f-bold">Logradouro</label>
+                  <p>{{ entity?.endereco?.rua || '--' }}</p>
+                </div>
+                <div class="col-4">
+                  <label class="form-label f-bold">Numero</label>
+                  <p>{{ entity?.endereco?.numero || '--' }}</p>
+                </div>
+                <div class="col-4">
+                  <label class="form-label f-bold">Complemento</label>
+                  <p>{{ entity?.endereco?.complemento || '--' }}</p>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-4">
+                  <label class="form-label f-bold">Bairro</label>
+                  <p>{{ entity?.endereco?.bairro || '--' }}</p>
+                </div>
+                <div class="col-4">
+                  <label class="form-label f-bold">Cidade</label>
+                  <p>{{ entity?.endereco?.cidade || '--' }}</p>
+                </div>
+                <div class="col-4">
+                  <label class="form-label f-bold">Estado</label>
+                  <p>{{ entity?.endereco?.uf || '--' }}</p>
+                </div>
+              </div>
+            </div>
+          </card>
+        </div>
+      </div>
+    </div>
+
     <div *ngIf="!!entity?.id" class="container-data">
-<!--      <div class="row">-->
-<!--        <card>-->
-<!--          <div class="card-header">-->
-<!--            <h4 class="card-title">Endereços</h4>-->
-<!--          </div>-->
+      <div class="row">
+        <card>
+          <div class="card-header">
+            <h4 class="card-title">Endereços</h4>
+          </div>
 
-<!--          <div class="card-body">-->
-<!--            <dg-table dg-dynamic-table [dynamicTable]="tableEnderecos"></dg-table>-->
-<!--          </div>-->
+          <div class="card-body">
+            <dg-table dg-dynamic-table [dynamicTable]="tableEnderecos">
+              <ng-template dgTableColumn columnName="principal" let-principal>
+                <i *ngIf="!!principal.row?.principal" style="font-size: 14pt" class="bi bi-star-fill fc-yellow"></i>
+                <i *ngIf="!principal.row?.principal" style="font-size: 10pt" class="bi bi-star"></i>
+              </ng-template>
+            </dg-table>
+          </div>
 
-<!--          <div class="card-footer">-->
-<!--            <button class="btn btn-success" (click)="enderecosModal.open()">Adicionar</button>-->
-<!--          </div>-->
-<!--        </card>-->
-<!--      </div>-->
+          <div class="card-footer">
+            <button class="btn btn-success" (click)="enderecosModal.open()">Adicionar</button>
+          </div>
+        </card>
+      </div>
     </div>
 
     <div *ngIf="!!entity?.id" class="container-data">
@@ -93,7 +198,12 @@
           </div>
 
           <div class="card-body">
-            <dg-table dg-dynamic-table [dynamicTable]="tableContatos"></dg-table>
+            <dg-table dg-dynamic-table [dynamicTable]="tableContatos">
+              <ng-template dgTableColumn columnName="principal" let-principal>
+                <i *ngIf="!!principal.row?.principal" style="font-size: 14pt" class="bi bi-star-fill fc-yellow"></i>
+                <i *ngIf="!principal.row?.principal" style="font-size: 10pt" class="bi bi-star"></i>
+              </ng-template>
+            </dg-table>
           </div>
           <div class="card-footer">
             <dg-paginator dg-dynamic-paginator [dynamicTable]="tableContatos"></dg-paginator>
