--- a/src/app/pages/private/clientes/clientes-insert-edit/clientes-insert-edit.component.html
+++ b/src/app/pages/private/clientes/clientes-insert-edit/clientes-insert-edit.component.html
@@ -43,7 +43,7 @@
                     <label class="btn btn-outline-primary" for="Pessoa_fisica">Pessoa Física</label>
 
                     <input
-                      value="JURUDUCA"
+                      value="JURIDICA"
                       formControlName="tipoPessoa"
                       class="btn-check"
                       type="radio"
@@ -59,7 +59,7 @@
                   <label class="form-label" style="width: 100%;">Sexo</label>
                   <div class="btn-group" role="group">
                     <input
-                      value="1"
+                      value="M"
                       formControlName="sexo"
                       class="btn-check"
                       type="radio"
@@ -70,7 +70,7 @@
                     <label class="btn btn-outline-primary" for="masculino">Masculino</label>
 
                     <input
-                      value="0"
+                      value="F"
                       formControlName="sexo"
                       class="btn-check"
                       type="radio"
