--- a/src/app/pages/private/locacao/sub-components/modal-servico-locacao/modal-servico-locacao.component.html
+++ b/src/app/pages/private/locacao/sub-components/modal-servico-locacao/modal-servico-locacao.component.html
@@ -15,7 +15,7 @@
         </div>
         <div class="col-4">
           <label class="form-label">Valor</label>
-          <input class="form-control" formControlName="valor">
+          <input class="form-control" formControlName="subTotal">
         </div>
       </div>
     </form>
