--- a/src/app/pages/private/locacao/locacao-insert-edit/locacao-insert-edit.component.html
+++ b/src/app/pages/private/locacao/locacao-insert-edit/locacao-insert-edit.component.html
@@ -120,6 +120,9 @@
             </dg-table>
           </div>
         </div>
+        <div class="card-footer">
+          <dg-paginator dg-dynamic-paginator [dynamicTable]="tableServicos"></dg-paginator>
+        </div>
       </card>
     </div>
 
