--- a/src/app/shared/ui/page-footer/page-footer.component.html
+++ b/src/app/shared/ui/page-footer/page-footer.component.html
@@ -1,13 +1,8 @@
 <div class="page-footer" [class.sidebar-opened]="sidebaOpened()">
   <div class="conteiner h-100">
     <div class="row h-100">
-      <div class="col-lg-7 col-md-12  row-btn">
+      <div class="col-12 row-btn">
         <ng-content></ng-content>
-      </div>
-      <div class="col-lg-5 col-md-12 copyright">
-<!--        <i class="fa fa-copyright">-->
-<!--        </i> 2019 <a href="http://www.minhacoleta.com">Minha Coleta</a>.-->
-<!--        Desenvolvido por <a href="http://www.datagrupo.com.br">DATAGRUPO</a>.-->
       </div>
     </div>
   </div>
