--- a/src/app/pages/private/produtos/podutos-main/podutos-main.component.html
+++ b/src/app/pages/private/produtos/podutos-main/podutos-main.component.html
@@ -6,15 +6,31 @@
       <custom-filters group="produtos">
         <div body-filters>
           <form [formGroup]="form">
-            <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
-              <label class="form-label">Nome</label>
-              <input
-                class="form-control"
-                formControlName="nome"
-                dg-dynamic-group="produtos"
-                paramName="nome"
-                (clearParams)="form.patchValue({ nome: '' })"
-              >
+            <div class="row">
+              <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
+                <label class="form-label">Nome</label>
+                <input
+                  class="form-control"
+                  formControlName="nome"
+                  dg-dynamic-group="produtos"
+                  paramName="nome"
+                  (clearParams)="form.patchValue({ nome: '' })"
+                >
+              </div>
+              <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
+                <label class="form-label">Status</label>
+                <select
+                  class="form-control"
+                  formControlName="status"
+                  dg-dynamic-group="clientes"
+                  paramName="status"
+                  (clearParams)="form.patchValue({ status: '' })"
+                >
+                  <option value="">Ambos</option>
+                  <option [value]="true">Ativos</option>
+                  <option [value]="false">Inativos</option>
+                </select>
+              </div>
             </div>
           </form>
         </div>
