--- a/src/app/pages/private/produtos/podutos-main/podutos-main.component.html
+++ b/src/app/pages/private/produtos/podutos-main/podutos-main.component.html
@@ -22,7 +22,7 @@
                 <select
                   class="form-control"
                   formControlName="status"
-                  dg-dynamic-group="clientes"
+                  dg-dynamic-group="produtos"
                   paramName="status"
                   (clearParams)="form.patchValue({ status: '' })"
                 >
