finalizando ajustes em serviços e ajustando page footer das telas

--- a/src/app/pages/private/produtos/podutos-insert-edit/podutos-insert-edit.component.html
+++ b/src/app/pages/private/produtos/podutos-insert-edit/podutos-insert-edit.component.html
@@ -58,9 +58,11 @@
         </div>
       </form>
     </div>
-    <div class="card-footer">
-      <button class="btn btn-success" crud-salvar>Salvar</button>
-      <button class="btn btn-secondary" crud-voltar>voltar</button>
-    </div>
+    <div class="card-footer"></div>
   </card>
 </div>
+
+<page-footer>
+  <button class="btn btn-success" crud-salvar>Salvar</button>
+  <button class="btn btn-secondary" crud-voltar>voltar</button>
+</page-footer>
