--- a/src/app/pages/private/lancamentos/sub-components/modal-lancamento/modal-lancamento.component.html
+++ b/src/app/pages/private/lancamentos/sub-components/modal-lancamento/modal-lancamento.component.html
@@ -1,6 +1,6 @@
 <dg-modal
   #modal
-  (afterClose)="close()"
+  (afterClose)="clear()"
   [class.modal-fatura-receita]="entity.tipo == 'RECEITA'"
   [class.modal-fatura-despesa]="entity.tipo == 'DESPESA'"
 >
