--- a/src/app/pages/private/locacao/locacao-main/locacao-main.component.html
+++ b/src/app/pages/private/locacao/locacao-main/locacao-main.component.html
@@ -1,38 +1,10 @@
-<div id="page-clientes" class="container">
+<div id="page-clientes" class="container-fluid">
 
   <card>
     <div class="card-header">
       <h4 class="card-title">Locações</h4>
     </div>
     <div class="card-header container-fluid">
-      <div class="row">
-<!--        <div class="col-lx-4 col-lg-4 col-md-6 col-sm-12">-->
-<!--          <label class="form-label">Nome do cliente</label>-->
-<!--          <input class="form-control" [(ngModel)]="filters.nomeCliente" dg-dynamic-group="locacoes"-->
-<!--                 paramName="nomeCliente">-->
-<!--        </div>-->
-<!--        <div class="col-lx-2 col-lg-2 col-md-6 col-sm-12">-->
-<!--          <label class="form-label">Status</label>-->
-<!--          <select class="form-select" [(ngModel)]="filters.status" dg-dynamic-group="locacoes"-->
-<!--                 paramName="status">-->
-<!--            <option value=""></option>-->
-<!--            <option value="ABERTO">Aberto</option>-->
-<!--            <option value="EM_LOCACAO">Em locação</option>-->
-<!--            <option value="FINALIZADO">Finalizado</option>-->
-<!--          </select>-->
-<!--        </div>-->
-<!--        <div class="col-lx-3 col-lg-3 col-md-6 col-sm-12">-->
-<!--          <label class="form-label">Data Inicial</label>-->
-<!--          <input type="date" class="form-control" [(ngModel)]="filters.dataInicial" dg-dynamic-group="locacoes"-->
-<!--                 paramName="dataInicial">-->
-<!--        </div>-->
-<!--        <div class="col-lx-3 col-lg-3 col-md-6 col-sm-12">-->
-<!--          <label class="form-label">Data Final</label>-->
-<!--          <input type="date" class="form-control" [(ngModel)]="filters.dataFinal" dg-dynamic-group="locacoes"-->
-<!--                 paramName="dataFinal">-->
-<!--        </div>-->
-      </div>
-
       <div class="row">
         <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
           <div class="row">
@@ -67,10 +39,15 @@
       </div>
 
       <div class="row">
-        <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+        <div class="col-xl-5 col-lg-6 col-md-12 col-sm-12">
           <label class="form-label">Nome do cliente</label>
           <input class="form-control" [(ngModel)]="filters.nomeCliente" dg-dynamic-group="locacoes"
                  paramName="nomeCliente">
+        </div>
+        <div class="col-xl-1 col-lg-6 col-md-12 col-sm-12">
+          <label class="form-label">ID</label>
+          <input class="form-control" [(ngModel)]="filters.id" dg-dynamic-group="locacoes"
+                 paramName="id">
         </div>
         <div class="col-xl-2 col-lg-2 col-md-12 col-sm-12">
           <label class="form-label">Renomada</label>
