criando tabelas da dashboard

--- a/src/app/pages/private/locacao/locacao-main/locacao-main.component.scss
+++ b/src/app/pages/private/locacao/locacao-main/locacao-main.component.scss
@@ -1,11 +1,12 @@
 ::ng-deep .dg-table {
-  td.locacao-vencendo {
+  tr:has(> td.locacao-vencendo) {
     background: rgba(234, 234, 39, 0.5);
   }
-  td.locacao-vencendo-hoje {
+  tr:has(> td.locacao-vencendo-hoje) {
     background: rgba(68, 68, 68, 0.3);
   }
-  td.locacao-atrazada {
+
+  tr:has(> td.locacao-atrazada) {
     background: rgba(255, 0, 0, 0.3);
   }
 }
