--- a/src/app/pages/private/dashboard/dashboard-main/dashboard-main.component.html
+++ b/src/app/pages/private/dashboard/dashboard-main/dashboard-main.component.html
@@ -1,1 +1,58 @@
-<p>dashboard-main works!</p>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+      <card>
+        <div class="card-header">
+          <h4 class="card-title">Locações Atrazadas</h4>
+        </div>
+        <div class="card-body">
+          <dg-table dg-dynamic-table [dynamicTable]="locacoesAtrazadas"></dg-table>
+        </div>
+        <div class="card-footer">
+          <dg-paginator dg-dynamic-paginator [dynamicTable]="locacoesAtrazadas"></dg-paginator>
+        </div>
+      </card>
+    </div>
+    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+      <card>
+        <div class="card-header">
+          <h4 class="card-title">Locações vencendo em 20 dias</h4>
+        </div>
+        <div class="card-body">
+          <dg-table dg-dynamic-table [dynamicTable]="locacoesAtrazadas"></dg-table>
+        </div>
+        <div class="card-footer">
+          <dg-paginator dg-dynamic-paginator [dynamicTable]="locacoesAtrazadas"></dg-paginator>
+        </div>
+      </card>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+      <card>
+        <div class="card-header">
+          <h4 class="card-title">Locações aguardando faturamento</h4>
+        </div>
+        <div class="card-body">
+          <dg-table dg-dynamic-table [dynamicTable]="locacoesAtrazadas"></dg-table>
+        </div>
+        <div class="card-footer">
+          <dg-paginator dg-dynamic-paginator [dynamicTable]="locacoesAtrazadas"></dg-paginator>
+        </div>
+      </card>
+    </div>
+    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+      <card>
+        <div class="card-header">
+          <h4 class="card-title">Locações começando em 20 dias</h4>
+        </div>
+        <div class="card-body">
+          <dg-table dg-dynamic-table [dynamicTable]="locacoesAtrazadas"></dg-table>
+        </div>
+        <div class="card-footer">
+          <dg-paginator dg-dynamic-paginator [dynamicTable]="locacoesAtrazadas"></dg-paginator>
+        </div>
+      </card>
+    </div>
+  </div>
+</div>
